--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "pixi.js": "^8.0.5",
     "vue": "^3.4.21"
   },
   "devDependencies": {
